--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -7,12 +7,12 @@ logging.level.*=INFO
 logging.level.org.hibernate=INFO
 
 # Datasource
-#spring.datasource.url=jdbc:h2:file:./data/acc_data_h2_test
-#spring.datasource.username=admin
-#spring.datasource.password=admin
-spring.datasource.url=jdbc:h2:tcp://localhost:9092/~/acc_data_resttest;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:h2:file:./data/acc_data_h2_test
+spring.datasource.username=admin
+spring.datasource.password=admin
+#spring.datasource.url=jdbc:h2:tcp://localhost:9092/~/acc_data_resttest;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 
